--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"postinstall": "prisma generate"
+		"postinstall": "prisma generate",
+		"prisma:inline": "cp ./node_modules/.prisma/client/*.js ./node_modules/@prisma/client",
+		"prisma:migrate": "prisma migrate deploy && npm run prisma:inline",
+		"prisma:migrate:dev": "prisma migrate dev && npm run prisma:inline",
+		"prisma:generate": "prisma generate && npm run prisma:inline"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
