--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "5.3.1",
+		"@sveltejs/adapter-vercel": "^3.0.3",
 		"cssnano": "^6.0.1",
 		"postcss-nesting": "^12.0.1",
 		"postcss-preset-env": "^9.1.4"
